--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -1,35 +1,48 @@
 @import './base.css';
 
+/* main {
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+} */
+
 #app {
-  max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0;
   font-weight: normal;
 }
 
 a,
-.green {
+.orange {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: var(--tml-orange);
   transition: 0.4s;
   padding: 3px;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+/* For all main content pages setup css */
+.main,
+.browse,
+.profile,
+.settings,
+.rating {
+  margin-left: max(25%, 200px);
+  min-height: 100vh;
+  background-color: var(--tml-black);
+  color: white;
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Raleway', sans-serif;
+}
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
+/* a:hover {
+  background-color: #f5901542;
+} */
+
+@media (min-width: 1024px) {
 }
